--- a/on/onTapGK.ipynb
+++ b/on/onTapGK.ipynb
@@ -50,6 +50,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n,p = 10, 0.07\n",
+    "#(p x=1)\n",
+    "print(binom.pmf(1, n, p))\n",
+    "#(p x>=1)\n",
+    "print(binom.sf(0, n, p))\n",
+    "#(p x<=1)\n",
+    "print(binom.cdf(1, n, p))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
