--- a/TK/22640121_NguyenTrungQuyen.ipynb
+++ b/TK/22640121_NguyenTrungQuyen.ipynb
@@ -870,31 +870,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nhiệt độ trung bình theo tháng cho mỗi thành phố Ngày        Thành_phố     \n",
-      "2023-01-01  Cần Thơ           33.1\n",
-      "            Huế               27.4\n",
-      "            Hà Nội            18.1\n",
-      "            Hạ Long           16.3\n",
-      "            Hải Phòng         17.3\n",
-      "                              ... \n",
-      "2023-12-31  Nha Trang         22.2\n",
-      "            TP Hồ Chí Minh    35.6\n",
-      "            Vũng Tàu          29.9\n",
-      "            Đà Lạt            21.3\n",
-      "            Đà Nẵng           25.2\n",
-      "Name: Nhiệt_độ, Length: 3650, dtype: float64\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#2.\t(0.75đ) Tính nhiệt độ trung bình theo tháng cho mỗi thành phố và hiển thị kết quả.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m grbyTheoTP \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNgày\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThành_phố\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnhiệt độ trung bình theo tháng cho mỗi thành phố\u001b[39m\u001b[38;5;124m\"\u001b[39m,grbyTheoTP[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNhiệt_độ\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
    "source": [
     "#2.\t(0.75đ) Tính nhiệt độ trung bình theo tháng cho mỗi thành phố và hiển thị kết quả.\n",
+    "df['Ngày'] = pd.to_datetime(df['Ngày'], format='%Y-%m-%d')\n",
+    "df['Tháng'] = df['Ngày'].dt.month\n",
+    "df['Năm'] = df['Ngày'].dt.year\n",
+    "\n",
+    "df.groupby(['Thành_phố', 'Tháng']).mean()['Nhiệt_độ']\n",
     "grbyTheoTP = df.groupby(['Ngày','Thành_phố'])\n",
     "print(\"nhiệt độ trung bình theo tháng cho mỗi thành phố\",grbyTheoTP['Nhiệt_độ'].mean())"
    ]
