--- a/ONTK2/solution.ipynb
+++ b/ONTK2/solution.ipynb
@@ -17,30 +17,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ✅ Tóm tắt Z-test và t-test trong kiểm định giả thuyết\n",
+    "###  Tóm tắt Z-test và t-test trong kiểm định giả thuyết (dùng cho kiểm định)\n",
     "\n",
-    "#### 📌 Khi nào dùng Z, khi nào dùng t? \n",
+    "####  Khi nào dùng Z, khi nào dùng t? \n",
     "\n",
     "- Nếu **biết** $ \\sigma $ (độ lệch chuẩn quần thể) → Dùng **Z-test**\n",
     "- Nếu **không biết**  $\\sigma $, chỉ có \\( s \\) (độ lệch chuẩn mẫu) → Dùng **t-test**\n",
     "\n",
     "---\n",
     "\n",
-    "### 📐 Công thức: cho trung bình\n",
+    "###  Công thức: cho trung bình\n",
     "\n",
-    "#### ✅ **Kiểm định Z (khi biết $ \\sigma $)**:\n",
+    "####  **Kiểm định Z (khi biết $ \\sigma $)**:\n",
     "\n",
     "$$z = \\frac{\\bar{x} - \\mu_0}{\\frac{\\sigma}{\\sqrt{n}}}$$\n",
     "\n",
     "\n",
-    "#### ✅ **Kiểm định t (khi không biết $ \\sigma $, dùng \\( s \\))**:\n",
+    "####  **Kiểm định t (khi không biết $ \\sigma $, dùng \\( s \\))**:\n",
     "$$\n",
     "t = \\frac{\\bar{x} - \\mu_0}{\\frac{s}{\\sqrt{n}}}\n",
     "$$\n",
     "\n",
     "---\n",
     "\n",
-    "### 🧠 Trong đó:\n",
+    "###  Trong đó:\n",
     "- $\\bar{x} $: Trung bình mẫu  \n",
     "- $\\mu_0 $: Trung bình theo giả thuyết $ H_0 $  \n",
     "- $ s $: Độ lệch chuẩn mẫu  \n",
@@ -49,9 +49,9 @@
     "\n",
     "---\n",
     "\n",
-    "### 📝 Ghi nhớ nhanh:\n",
-    "> ✅ Biết $ \\sigma $ → Z-test  \n",
-    "> ❌ Không biết $ \\sigma $ → t-test"
+    "###  Ghi nhớ nhanh:\n",
+    "> Biết $ \\sigma $ → Z-test  \n",
+    ">  Không biết $ \\sigma $ → t-test"
    ]
   },
   {
@@ -159,10 +159,12 @@
     "Gọi $\\mu$ là điểm trung bình môn Ngữ Văn của tập dữ liệu. Ta có, $\\bar{x}=7.00$ là điểm trung bình môn Ngữ Văn của 25 thí sinh.\n",
     "\n",
     "Độ tin cậy $95\\% = 1 - \\alpha$ => $\\alpha=0.05$\n",
-    "<!-- \n",
+    "<br>\n",
+    "trong trường hợp ko có độ lệch chuẩn <br>\n",
     "Ta có $n = 25 < 30$. => ta sấp sỉ phân phối trên với phân phối **student t** với bậc tự do là n-1, ta có:\n",
     "$$\\bigg(\\bar{x} - t_{n-1;1-\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}},\\bar{x}+t_{n-1;1-\\frac{\\alpha}{2}}\\frac{s}{\\sqrt{n}}\\bigg)$$\n",
-    "Trong đó, $\\alpha = 0.05$, $z_{1-\\frac{\\alpha}{2}}=1.96$, $\\bar{x}=7.44$, $s=0.94$ -->\n",
+    "Trong đó, $\\alpha = 0.05$, $z_{1-\\frac{\\alpha}{2}}=1.96$, $\\bar{x}=7.44$, $s=0.94$\n",
+    "<br>\n",
     "Sử dụng phân phối chuẩn (Z)vì đề yêu cầu dùng độ lệch chuẩn quẩn thể $\\sigma$\n",
     "$$ \\bar{x} \\pm z_{\\alpha/2} \\cdot \\frac{\\sigma}{\\sqrt{n}} $$\n",
     "trong đó: <br> \n",
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -211,7 +213,7 @@
     "#Khi không biết σ (độ lệch chuẩn quần thể), ta phải thay bằng s (độ lệch chuẩn mẫu).\n",
     "\n",
     "# t = stats.t.ppf(1-alpha/2,n-1)\n",
-    "# print(f\"z-score của phân phối chuẩn với độ tin cậy {1-alpha:.2f} là {t:.2f}.\")\n",
+    "# print(f\"z- scorecủa phân phối chuẩn với độ tin cậy {1-alpha:.2f} là {t:.2f}.\")\n",
     "# print(sample_mean-t*std/np.sqrt(n), sample_mean+t*std/np.sqrt(n))\n",
     "#------------------------------------------------------------------\n",
     "\n",
@@ -463,10 +465,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Biết độ lệch chuẩn của quần thể (σ = 1.2):\n",
+    "→ Dùng kiểm định Z (không dùng t-test, vì t-test dùng khi không biết σ).\n",
+    "\n",
+    "Cỡ mẫu lớn (n = 40 ≥ 30):\n",
+    "→ Thỏa điều kiện áp dụng phân phối chuẩn theo định lý giới hạn trung tâm.\n",
+    "\n",
+    "Mục tiêu kiểm tra có lớn hơn (>):\n",
+    "→ Dùng kiểm định một phía bên phải.\n",
+    "\n",
+    "###  Công thức kiểm định Z một phía:\n",
+    "$$\n",
+    "Z = \\frac{\\bar{x} - \\mu_0}{\\sigma / \\sqrt{n}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Trong đó:\n",
+    "- x̄: Trung bình mẫu\n",
+    "- μ₀: Trung bình giả định (mức chung)\n",
+    "- σ: Độ lệch chuẩn của quần thể\n",
+    "- n: Cỡ mẫu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = 2.1081851067789215\n",
+      "p-value = 0.017507490509831136\n",
+      "→ Bác bỏ H0: Có bằng chứng cho thấy lớp học tốt hơn mức chung.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
@@ -505,10 +543,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Biết độ lệch chuẩn của quần thể (σ = 1.4):\n",
+    "→ Dùng z-distribution để xây dựng khoảng tin cậy.\n",
+    "\n",
+    "Cỡ mẫu lớn (n = 60 ≥ 30):\n",
+    "→ Thỏa điều kiện sử dụng phân phối chuẩn (do định lý giới hạn trung tâm).\n",
+    "\n",
+    "Xây dựng khoảng tin cậy cho trung bình thật sự của toàn khối (2 phía):\n",
+    "→ Dùng khoảng tin cậy hai phía với mức tin cậy 95%.\n",
+    "\n",
+    "### Công thức khoảng tin cậy 95% cho trung bình (biết σ):\n",
+    "\n",
+    "$$\n",
+    "\\left( \\bar{x} - z_{\\alpha/2} \\cdot \\frac{\\sigma}{\\sqrt{n}},\\ \\bar{x} + z_{\\alpha/2} \\cdot \\frac{\\sigma}{\\sqrt{n}} \\right)\n",
+    "$$\n",
+    "\n",
+    "Trong đó:\n",
+    "- $\\bar{x} $: Trung bình mẫu  \n",
+    "- $ \\sigma $: Độ lệch chuẩn của quần thể  \n",
+    "- $ n $: Cỡ mẫu  \n",
+    "- $ z_{\\alpha/2} $: Giá trị Z tới hạn tương ứng với mức tin cậy  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Khoảng tin cậy 95% cho điểm trung bình: (5.85, 6.55)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
